--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Unappetized</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="scripts.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <script src="./scripts.js" defer></script>
 </head>
 <body>
 
     <div id="title">Unappetized...</div>
+
+    <p class="general-text">scroll 2 savor</p>
+
+    <div class="large-space"></div>
+
     <div class="container">
       <div class="button-div">
         <button id="button-element" type="button">Today I ate:</button>
@@ -19,6 +24,11 @@
         <p id="placeholder"></p>
       </div>
     </div>
+
+    <p class="general-text">pt 2. Word salad</p>
+
+
+
 
 </body>
 </html>
